try to fix the overflow screen prob, unsuccessful so far
have to work on the transition and succesffully doing the phone menu opener TT

--- a/style.css
+++ b/style.css
@@ -75,9 +75,9 @@ header {
     height: 100vh;
     top: 0;
     right: 0;
-    justify-content: center;
+    justify-content:space-evenly;
     align-items: center;
-    margin-left: -100%;
+    margin-left: -100%; 
   }
 
   .nav-links .menulogo {
